--- a/Views/html/index.html
+++ b/Views/html/index.html
@@ -61,6 +61,12 @@
 			<li><a href="javascript:popupOpen('#popupQuiz4');"><span>-  05_퀴즈_퀴즈풀기 모달팝업(선택)</span></a></li>
 			<li><a href="javascript:popupOpen('#popupQuiz5');"><span>-  05_퀴즈_퀴즈풀기 모달팝업(응모완료)</span></a></li>
 			<li><a href="javascript:popupOpen('#popupQuiz6');"><span>-  05_퀴즈_오답노트 모달팝업</span></a></li>
+
+			<li><a href="javascript:popupOpen('#popupQuiz7');"><span>-  05_퀴즈_1 모달팝업</span></a></li>
+			<li><a href="javascript:popupOpen('#popupQuiz8');"><span>-  05_퀴즈_2 모달팝업</span></a></li>
+			<li><a href="javascript:popupOpen('#popupQuiz9');"><span>-  05_퀴즈_3 모달팝업</span></a></li>
+			<li><a href="javascript:popupOpen('#popupQuiz10');"><span>-  05_퀴즈_4 모달팝업</span></a></li>
+
 			<li><a href="javascript:popupOpen('#popupWinners');"><span>- 05_퀴즈_당첨발표</span></a></li>
 		</ul>
 	</div>
@@ -359,6 +365,131 @@
 		</div>
 	</div>
 
+	<div class="popup popup-quiz" id="popupQuiz7">
+		<div class="popup-wrap">
+			<a href="javascript:popupClose('#popupQuiz7');" class="popup-close"></a>
+			<div class="popup-content">
+				<div class="quiz-title">
+					<strong>Quiz 1. '탑승자 모두에게 여유롭고 프리미엄한 공간’ 편</strong>
+					<p>다음 중 The new Carnival의 2열에서 타격/진동 방식의 고성능 마사지 기능을 제공하는 옵션은?</p>
+				</div>
+
+				<div class="quiz-list">
+					<ul>
+						<li><a href="javascript:;">다이내믹 바디 케어(7인승)</a></li>
+						<li><a href="javascript:;">에르고 모션 시트</a></li>
+						<li><a href="javascript:;">UV-C 살균 암레스트 수납함</a></li>
+						<li><a href="javascript:;">2열 풀플랫 시트(9인승)</a></li>
+					</ul>
+				</div>
+
+				<div class="quiz-check">
+					<span class="check-point">Check point!</span>
+					<p class="popup-text">3가지 타입의 '두드림'과 '진동' 강도 및 반복 패턴을 제공합니다.</p>
+				</div>
+				
+			</div>
+
+			<div class="popup-action black">
+				<a href="javascript:;">다음</a>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="popup popup-quiz" id="popupQuiz8">
+		<div class="popup-wrap">
+			<a href="javascript:popupClose('#popupQuiz8');" class="popup-close"></a>
+			<div class="popup-content">
+				<div class="quiz-title">
+					<strong>Quiz 2. '대한민국 대표 패밀리카에 걸맞는 존재감’ 편</strong>
+					<p>다음 중 The new Carnival의 운전자 뿐만 아니라 동승자도 만족도를 느끼게 해주는 옵션은?</p>
+				</div>
+
+				<div class="quiz-list">
+					<ul>
+						<li><a href="javascript:;"><strong>멀티존 음성인식</strong>(명령어를 통해 운전석 뿐 아니라 동승석과 2열에서도 음성인식 실행 가능)</a></li>
+						<li><a href="javascript:;"><strong>에어컨 광촉매 살균시스템</strong>(공조 장치 내부 광촉매 모듈에 가시광선을 조사하여, 유해 바이러스 및 박테리아를 살균)</a></li>
+						<li><a href="javascript:;"><strong>에어컨 광촉매 살균시스템</strong>(공조 장치 내부 광촉매 모듈에 가시광선을 조사하여, 유해 바이러스 및 박테리아를 살균)</a></li>
+						<li><a href="javascript:;"><strong>UV-C 살균 암레스트 수납함</strong>(콘솔 내부에 UV-C 자외선 살균 기능을 적용하여 각종 소지품을 위생적으로 보관)</a></li>
+					</ul>
+				</div>
+
+				<div class="quiz-check">
+					<span class="check-point">Check point!</span>
+					<p class="popup-text">그 외에도 충분한 C타입 USB 단자, 승하차 스팟 램프, 독립제어 풀오토 에어컨 등 동승자도 만족할 다양한 기능을 갖추었습니다.</p>
+				</div>
+				
+			</div>
+
+			<div class="popup-action black">
+				<a href="javascript:;">다음</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="popup popup-quiz" id="popupQuiz9">
+		<div class="popup-wrap">
+			<a href="javascript:popupClose('#popupQuiz9');" class="popup-close"></a>
+			<div class="popup-content">
+				<div class="quiz-title">
+					<strong>Quiz 3. '여유롭고 편리한 드라이빙’ 편</strong>
+					<p>The new Carnival는 탑승한 가족 뿐만 아니라 운전를 배려하는 기능이 다수 적용 되었는데요, 다음 중 운전시 이용할 수 있는 옵션에 해당하지 않는 것은?</p>
+				</div>
+
+				<div class="quiz-list">
+					<ul>
+						<li><a href="javascript:;">헤드업 디스플레이</a></li>
+						<li><a href="javascript:;">증강현실 네비게이션</a></li>
+						<li><a href="javascript:;">운전석 에르고 모션 시트</a></li>
+						<li><a href="javascript:;">스마트 파워테일게이트</a></li>
+					</ul>
+				</div>
+
+				<div class="quiz-check">
+					<span class="check-point">Check point!</span>
+					<p class="popup-text">이 외에도 운전을 안전하게 도와줄 '고속도로 주행 보조 2' '운전스타일 연동 스마트 크루즈 컨트롤', 내비게이션 기반 스마트 크루즈 컨트롤' 등 첨단 안전 사양들이 적용되었습니다.</p>
+				</div>
+				
+			</div>
+
+			<div class="popup-action black">
+				<a href="javascript:;">다음</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="popup popup-quiz" id="popupQuiz10">
+		<div class="popup-wrap">
+			<a href="javascript:popupClose('#popupQuiz10');" class="popup-close"></a>
+			<div class="popup-content">
+				<div class="quiz-title">
+					<strong>Quiz 4. '카니발 HEV 혜택' 편</strong>
+					<p>The new Carnival이 받을 수 있는 저공해차 2종 혜택 중 해당하지 않는 것은?</p>
+				</div>
+
+				<div class="quiz-list">
+					<ul>
+						<li><a href="javascript:;">공영 주차장 요금 할인(서울ㆍ수도권 50%)</a></li>
+						<li><a href="javascript:;">공항 주차장 요금 할인(전국 15개 공항 50%)</a></li>
+						<li><a href="javascript:;">1,3호 터널 혼잡통행료 면제</a></li>
+						<li><a href="javascript:;">전국 주요 백화점 全 지점 무료 발렛 파킹 서비스</a></li>
+					</ul>
+				</div>
+
+				<div class="quiz-check">
+					<span class="check-point">Check point!</span>
+					<p class="popup-text">저공해차 2종 혜택은 지자체, 주차장 별 상이할 수 있습니다.</p>
+				</div>
+				
+			</div>
+
+			<div class="popup-action black">
+				<a href="javascript:;">다음</a>
+			</div>
+		</div>
+	</div>
+	
 	<div class="popup" id="popupWinners">
 		<div class="popup-wrap">
 			<a href="javascript:popupClose('#popupWinners');" class="popup-close"></a>
