--- a/Views/html/00_메인페이지.html
+++ b/Views/html/00_메인페이지.html
@@ -91,6 +91,9 @@
               </div>
               <div class="action">
                 <a href="javascript:;">응모하기</a>
+				<!-- 231109 수정 -->
+				<a href="https://www.kia.com/kr/vehicles/carnivalpe/features" target="_blank" class="btn-link">카니발 자세히 알아보기</a>
+				<!--// 231109 수정 -->
               </div>
             </div>
           </div>
