--- a/Views/html/index.html
+++ b/Views/html/index.html
@@ -262,6 +262,9 @@
 			</div>
 
 			<div class="popup-action">
+				<!-- 231109 수정 -->
+				<a href="https://www.kia.com/kr/vehicles/carnivalpe/features" target="_blank" class="white">카니발 자세히 알아보기</a>
+				<!--// 231109 수정 -->
 				<a href="javascript:;">확인</a>
 			</div>
 		</div>
@@ -294,9 +297,11 @@
 				
 			</div>
 
-			<div class="popup-action black">
-				<a href="javascript:;">다음</a>
+			<!-- 231109 수정 -->
+			<div class="popup-action ">
+				<a href="javascript:;" class="black">다음</a>
 			</div>
+			<!--// 231109 수정 -->
 		</div>
 	</div>
 
@@ -390,9 +395,11 @@
 				
 			</div>
 
-			<div class="popup-action black">
-				<a href="javascript:;">다음</a>
+			<!-- 231109 수정 -->
+			<div class="popup-action ">
+				<a href="javascript:;" class="black">다음</a>
 			</div>
+			<!--// 231109 수정 -->
 		</div>
 
 	</div>
@@ -422,9 +429,11 @@
 				
 			</div>
 
-			<div class="popup-action black">
-				<a href="javascript:;">다음</a>
+			<!-- 231109 수정 -->
+			<div class="popup-action ">
+				<a href="javascript:;" class="black">다음</a>
 			</div>
+			<!--// 231109 수정 -->
 		</div>
 	</div>
 
@@ -453,9 +462,11 @@
 				
 			</div>
 
-			<div class="popup-action black">
-				<a href="javascript:;">다음</a>
+			<!-- 231109 수정 -->
+			<div class="popup-action ">
+				<a href="javascript:;" class="black">다음</a>
 			</div>
+			<!--// 231109 수정 -->
 		</div>
 	</div>
 
@@ -484,9 +495,11 @@
 				
 			</div>
 
-			<div class="popup-action black">
-				<a href="javascript:;">다음</a>
+			<!-- 231109 수정 -->
+			<div class="popup-action ">
+				<a href="javascript:;" class="black">다음</a>
 			</div>
+			<!--// 231109 수정 -->
 		</div>
 	</div>
 	
